force-app/main/default/objects/ContactLightningURIEvent__b/ContactLightningURIEvent__b.object-meta.xml
<CustomObject>
    <label>ContactLightningURIEvent</label>
    <pluralLabel>ContactLightningURIEvents</pluralLabel>
</CustomObject>