force-app/main/default/objects/ContactLightningURIEvent__b/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ContactLightningURIEvents</relationshipLabel>
    <relationshipName>ContactLightningURIEvents</relationshipName>
    <type>Lookup</type>
</CustomField>