force-app/main/default/objects/ContactLightningURIEvent__b/fields/DevicePlatform__c.field-meta.xml
<CustomField>
    <fullName>DevicePlatform__c</fullName>
    <label>DevicePlatform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>