force-app/main/default/objects/ContactLightningURIEvent__b/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>EventDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>