force-app/main/default/objects/ContactLightningURIEvent__b/fields/EventIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EventIdentifier__c</fullName>
    <label>EventIdentifier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>