force-app/main/default/objects/ContactLightningURIEvent__b/fields/LightningURIID__c.field-meta.xml
<CustomField>
    <fullName>LightningURIID__c</fullName>
    <label>LightningURIID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>