force-app/main/default/objects/ContactLightningURIEvent__b/fields/OperatingSystem__c.field-meta.xml
<CustomField>
    <fullName>OperatingSystem__c</fullName>
    <label>OperatingSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>