force-app/main/default/objects/ContactLightningURIEvent__b/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>