force-app/main/default/objects/ContactLightningURIEvent__b/fields/OsName__c.field-meta.xml
<CustomField>
    <fullName>OsName__c</fullName>
    <label>OsName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>