force-app/main/default/objects/ContactLightningURIEvent__b/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>UserType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>